--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
 
 
   <main>
-    <div class="container-fluid px-0 overflow-hidden text-white fondo1 bg-gradient">
+    <div class="container-fluid px-0 overflow-hidden text-white">
 
       
         <!-- MENU -->
-      <nav class="navbar navbar-expand-lg navbar-light fondo1 bg-gradient fw-bold">
+      <nav class="navbar navbar-expand-md fixed-top navbar-light fondo1 bg-gradient fw-bold">
 
-        <div class="container-fluid d-flex justify-content-center">
-          <a class="navbar-brand text-white" href="#">NM</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container-fluid d-flex justify-content-center ">
+          <a class="navbar-brand text-white nav-hover" href="https://natemen.github.io/">NM</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav mx-auto">
-              <a class="nav-link active text-white" aria-current="page" href="#Home">Home</a>
-              <a class="nav-link text-white" href="#About">About Me</a>
-              <a class="nav-link text-white" href="#Ex">Experience</a>
-              <a class="nav-link text-white" href="#Skills">Skills</a>
-              <a class="nav-link text-white" href="#Port">Portfolio</a>
-              <a class="nav-link text-white" href="#Contact">Contact</a>
+              <a class="nav-link active text-white nav-hover" aria-current="page" href="#Home">Home</a>
+              <a class="nav-link text-white nav-hover" href="#About">About Me</a>
+              <a class="nav-link text-white nav-hover" href="#Ex">Experience</a>
+              <a class="nav-link text-white nav-hover" href="#Skills">Skills</a>
+              <a class="nav-link text-white nav-hover" href="#Port">Portfolio</a>
+              <a class="nav-link text-white nav-hover" href="#Contact">Contact</a>
             </div>
           </div>
         </div>
@@ -53,9 +53,9 @@
 
       
       <!-- PROFILE -->
-      <div class="row p-5 text-center bg-image" id="Home">
-        <div class="col"></div>
-        <div class="col-10 col-sm-3">
+      <div class="row p-5 pb-2 text-center d-flex justify-content-center bg-image" id="Home">
+        <!-- <div class="col"></div> -->
+        <div class="col-8 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
           <div class="rounded-3">
             <div class="container-fluid py-1">
               <div class="">
@@ -65,7 +65,7 @@
             </div>
           </div>
         </div>
-        <div class="col"></div>
+        <!-- <div class="col"></div> -->
         <h5 class="fw-bold text-dark">Jr Developer</h5>
         <h5 class="display-5 fw-bold text-dark">Nathán Mendoza</h5>
       </div>
@@ -73,19 +73,19 @@
 
 
       <!-- ABOUT ME -->
-      <div class="row text-center align-items-center py-4 px-15 bg-image2" id="About">
+      <div class="row py-5 px-15 text-center align-items-center d-flex justify-content-center bg-image2" id="About">
         <h2 class="mb-3 fondo1 bg-gradient">About Me</h2>
-        <div class="col-3"></div>
-        <div class="col-6 fondo1 bg-gradient p-3 my-1">
+        <!-- <div class="col"></div> -->
+        <div class="col-12 col-md-10 col-lg-8 col-xl-6 mx-xl-2 col-xxl-4 fondo1 bg-gradient p-3 my-1">
           <ul class="list-group list-group-flush ">
             <li class="list-group-item fondo2 bg-gradient">Name: Ramiro Nathán Mendoza Urrutia.</li>
             <li class="list-group-item">Age: 26 Years Old.</li>
             <li class="list-group-item fondo2 bg-gradient">Location: Danlí, Honduras, C. A. </li>
           </ul>
         </div>
-        <div class="col-3"></div>
-        <div class="col-2"></div>
-        <div class="col-8 fondo1 bg-gradient p-3 my-1">
+        <!-- <div class="col"></div> -->
+        <!-- <div class="col-2"></div> -->
+        <div class="col-12 col-md-8 col-lg-6 mx-xl-2 fondo1 bg-gradient p-3 my-3">
           <div class="card h-100  bg-gradient">
             <div class="card-body">
               <p class="card-text text-dark">I am a web designer who focuses on providing the best service to my clients.
@@ -93,16 +93,16 @@
             </div>
           </div>
         </div>
-        <div class="col-2"></div>
+        <!-- <div class="col-2"></div> -->
       </div>
 
 
       <!-- EXPERIENCE -->
-      <div class="row py-4 px-15 text-center align-items-center bg-image2" id="Ex">
+      <div class="row py-5 px-15 text-center align-items-center d-flex justify-content-center bg-image2" id="Ex">
         <h2 class="mb-3 fondo1 bg-gradient ">Experience</h2>
-        <div class="col">
-        </div>
-        <div class="col-sm-6">
+        <!-- <div class="col">
+        </div> -->
+        <div class="col-12 col-sm-10 col-md-8 col-lg-6">
           <div class="card fondo1 bg-gradient">
             <div class="card-body">
               <p>Central America Symaware</p>
@@ -116,18 +116,18 @@
             </div>
           </div>
         </div>
-        <div class="col">
-        </div>
+        <!-- <div class="col">
+        </div> -->
       </div>
 
 
       <!-- SKILLS -->
-       <div class="row text-center align-items-center py-4 px-15 bg-image2" id="Skills">
+       <div class="row py-5 px-15 text-center align-items-center d-flex justify-content-center bg-image2" id="Skills">
          <h2 class="mb-3 fondo1 bg-gradient">Skills</h2>
 
-         <div class="col-6">
-           <h3 class="mb-3 fondo1 bg-gradient">Personal</h3>
-           <ul class="list-group list-group-flush fondo1 bg-gradient p-3 mx-4">
+         <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xxl-4">
+           <h3 class="mt-2 mb-3 mx-5 fondo1 bg-gradient">Personal</h3>
+           <ul class="list-group list-group-flush fondo1 bg-gradient p-3 mb-4 mx-2">
              <li class="list-group-item fondo2 bg-gradient">Flexible</li>
              <li class="list-group-item">Creative</li>
              <li class="list-group-item fondo2 bg-gradient">Reliable</li>
@@ -136,8 +136,8 @@
            </ul>
          </div>
 
-         <div class="col-6">
-          <h3 class="mb-3 fondo1 bg-gradient">Profesional</h3>
+         <div class="col-12 col-md-10 col-lg-8 col-xl-6">
+          <h3 class="mb-3 mx-5 fondo1 bg-gradient">Profesional</h3>
            <ul class="list-group list-group-flush fondo1 bg-gradient p-3 mx-2">
             <li class="list-group-item fondo2 bg-gradient">HTML and CSS</li>
             <li class="list-group-item">Bootstrap 5</li>
@@ -149,29 +149,29 @@
 
 
         <!-- PORTFOLIO  -->
-        <div class="row text-center  py-4 px-15 bg-image2" id="Port">
+        <div class="row py-5 px-15 text-center align-items-center d-flex justify-content-center bg-image2" id="Port">
           <h2 class="mb-3 fondo1 bg-gradient">Portfolio</h2>
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <figure class="figure">
-              <img src="..." class="figure-img img-fluid rounded" alt="...">
-              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+              <img class="figure-img img-fluid rounded" src="./Imagen/web1.png " alt="...">
+              <figcaption class="figure-caption fondo1 text-white">This Site: I made it using HTML, CSS, Bootstrap 5</figcaption>
             </figure>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <figure class="figure">
               <img src="..." class="figure-img img-fluid rounded" alt="...">
-              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+              <figcaption class="figure-caption"></figcaption>
             </figure>
           </div>
         </div>
 
 
         <!-- CONTACT-->
-        <div class="row text-center text-dark py-4 bg-image" id="Contact">
+        <div class="row text-center d-flex justify-content-center text-dark pt-4 pb-1 bg-image" id="Contact">
           <h2 class="mb-3 text-white">Contact Me</h2>
 
-        <div class="col-2"></div>
-          <div class="col-4 align-items-center">
+        <!-- <div class="col-2"></div> -->
+          <div class="col-12 col-md-4 align-items-center">
             <h5>
               <i class="icofont-email"> E-Mail </i>
             </h5>
@@ -179,7 +179,7 @@
           </div>
 
 
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <h5> 
               <i class="icofont-users-alt-1 icofont-1x"> Social Profiles </i>
             </h5>
@@ -193,11 +193,14 @@
               <i class="text-white icofont-instagram"></i>
             </a>
           </div>
-        <div class="col-2"></div>
+        </div>
 
+        <!-- <div class="col-2"></div> -->
 
-        <div class="col-2"></div>
-          <div class="col-4 mt-2">
+        <div class="row text-center d-flex justify-content-center text-dark pt-1 pb-5 bg-image" id="Contact">
+
+        <!-- <div class="col-2"></div> -->
+          <div class="col-12 col-md-4 mt-2">
             <h5>
               <i class="icofont-bag-alt"> Agency I work for </i>
             </h5>
@@ -206,7 +209,7 @@
             </a>
           </div>
 
-          <div class="col-4 mt-2">
+          <div class="col-12 col-md-4 mt-2">
             <h5>
               <i class="icofont-business-man"> Upwork Profile </i>
             </h5>
@@ -215,7 +218,7 @@
             </a>
           </div>
         </div>
-        <div class="col-2"></div>
+        <!-- <div class="col-2"></div> -->
 
 
          <!-- FOOTER -->
@@ -223,6 +226,17 @@
           &copy; 2021
         </footer>
       </div>
+
+      <!-- <script>
+        function accion(){
+            console.log('esta funcionando mi boton');
+            var ancla = document.getElementsByClassName('nav-enlace');
+            for(var i = 0; i < ancla.length; i ++) {
+                ancla[i].classList.toggle('desaparece');
+            }
+        }
+
+    </script> -->
 
   </main>
 
